@@ -794,27 +794,6 @@ function fillDestFilename(id) {
 	}
 }
 
-
-function considerChangingExpiryFocus() {
-	if (!document.getElementById) {
-		return;
-	}
-	var drop = document.getElementById('wpBlockExpiry');
-	if (!drop) {
-		return;
-	}
-	var field = document.getElementById('wpBlockOther');
-	if (!field) {
-		return;
-	}
-	var opt = drop.value;
-	if (opt == 'other') {
-		field.style.display = '';
-	} else {
-		field.style.display = 'none';
-	}
-}
-
 function scrollEditBox() {
 	var editBoxEl = document.getElementById("wpTextbox1");
 	var scrollTopEl = document.getElementById("wpScrolltop");
